# HelloPlugin

./: README.md  settings.gradle
app_main/: build.gradle
app_main/src/main/: AndroidManifest.xml
app_main/src/main/java/com/example/helloplugin/: MainActivity.java
app_main/src/main/res/layout/: activity_main.xml
app_main/src/main/res/values/: strings.xml
app_setting/: build.gradle
app_setting/src/androidTest/java/com/example/app_setting/: ExampleInstrumentedTest.java
app_setting/src/main/cpp/: hello_so.cpp
app_setting/src/main/java/com/example/app_setting/: JniManager.java  MainActivity.java
app_setting/src/main/res/layout/: activity_main.xml
app_setting/src/main/res/values/: strings.xml
app_setting/src/main/res/values-night/: themes.xml
app_setting/src/test/java/com/example/app_setting/: ExampleUnitTest.java
app_view/: build.gradle
app_view/src/androidTest/java/com/example/app_view/: ExampleInstrumentedTest.java
app_view/src/main/java/com/example/app_view/: MainActivity.java
app_view/src/main/res/layout/: activity_main.xml
app_view/src/main/res/values/: strings.xml
app_view/src/test/java/com/example/app_view/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lib_plugin/: README.md  build.gradle
lib_plugin/src/main/: AndroidManifest.xml
lib_plugin_child/: build.gradle
mainApp/: build.gradle
nativeApp/: build.gradle
nativeApp/src/main/: AndroidManifest.xml
nativeApp/src/main/cpp/: CMakeLists.txt  hello_so.cpp
nativeApp/src/main/res/values/: strings.xml  themes.xml
viewApp/: build.gradle
(+24 files in other folders)
